fix bug with alignment on minimap

--- a/projects/web-mev/src/app/d3/components/spatialge-normalization/spatialge-normalization.component.scss
+++ b/projects/web-mev/src/app/d3/components/spatialge-normalization/spatialge-normalization.component.scss
@@ -283,3 +283,8 @@ mat-slider {
 .minimapPlotContainer{
     position: absolute;
 }
+
+.instructions_text{
+    color: rgba(0,0,0,.8);
+    width: 50vw;
+}
